# VRMemoir

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-quality.yml  win64-release.yml
.jules/: bolt.md
src/: api.rs  bio.rs  db.rs  fsm.rs  i18n.rs  main.rs  recorder.rs  server.rs  session.rs  watcher.rs
