[package]
name = "vrmemoir"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
chrono = { version = "0.4", features = ["serde", "clock", "std"] }
regex = "1"
base64 = "0.22"
anyhow = "1"
urlencoding = "2"
sysinfo = "0.33"
once_cell = "1"
sys-locale = "0.3"
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
wasapi = "0.22"
audiopus = "0.3.0-rc.0"
ogg = "0.9"
hound = "3.5"

[profile.release]
opt-level = "z"
lto = true
strip = true
